made block loading take advantage of the GameSingletons.loadingQueue, made the connector function take in the base namespace, removed the custom texture-loader experiment, added ModelTexture for emissive texture support on java-generated block models, updated BlockModelBuilder experiment, updated to cosmic-reach 0.5.5